# conlloovia

./: .pylintrc  .travis.yml  CONTRIBUTING.rst  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
conlloovia/: __init__.py  cli.py  conlloovia.py  first_fit.py  greedy.py  model.py  problem_helper.py  visualization.py
docs/: conf.py
examples/: example.py  example1.py  example_greedy.py
tests/: __init__.py  conftest.py  test_conlloovia.py  test_first_fit.py  test_greedy.py  test_limits_adapter.py  test_problem_helper.py  test_units.py
