[tool.poetry]
name = "conlloovia"
version = "0.1.0"
description = "Use linear programming to allocate containers to cloud infrastructure"
authors = ["Joaquin Entrialgo Castaño <jentrialgo@uniovi.es>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pulp = "^2.7.0"
pint = "^0.20.1"
rich = "^13.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
